apps/library/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: library
  namespace: default
  labels:
    app: library
spec:
  replicas: 1
  template:
    metadata:
      name: library
      labels:
        app: library
    spec:
      containers:
        - name: library
          image: library
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: http
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: http
      restartPolicy: Always
  selector:
    matchLabels:
      app: library
