apps/library/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: library
  namespace: default
spec:
  rules:
    - host: library.lvh.me
      http:
        paths:
          - backend:
              service:
                name: library
                port:
                  name: http
            pathType: ImplementationSpecific
            path: /api/books
